[package]
name = "zap_llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
chrono = "0.4.38"
dotenv = "0.15.0"
ollama-rs = "0.2.1"
reqwest = "0.12.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
